# indoor_solution_stream

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
logs/quuppa test/2 hand held low/: ble.csv
logs/quuppa test/3 hand held high/: rigid_body_sentinel.csv
logs/quuppa test/4 flight/: rigid_body_sentinel.csv
logs/quuppa test/5 flight alt limit test/: rigid_body_sentinel.csv
logs/tests/: plotter_ble_quuppa.py  plotter_uwb_wifive.py
logs/tests/quuppa test/1 flight/: ble.csv
logs/tests/quuppa test/2 hand held low/: rigid_body_sentinel.csv
logs/tests/quuppa test/3 hand held high/: ble.csv
logs/tests/quuppa test/4 flight/: ble.csv
logs/tests/quuppa test/5 flight alt limit test/: ble.csv
logs/tests/quuppa test/6 flight hover test/: ble.csv  rigid_body_sentinel.csv
logs/tests/quuppa test/7 calibration bar high alt/: ble.csv  rigid_body_sentinel.csv
logs/tests/quuppa test2/1 hand held/: ble.csv  rigid_body_calibration_bar.csv
logs/tests/quuppa test2/2 hand held/: ble.csv  rigid_body_calibration_bar.csv
logs/tests/quuppa test2/3 figure eight/: ble.csv  rigid_body_calibration_bar.csv
logs/tests/quuppa test2/4 flight/: ble.csv
logs/tests/quuppa test2/5 flight2/: ble.csv
logs/tests/wifive test/1/: rigid_body_calibration_bar.csv  uwb.csv
logs/tests/wifive test/2/: rigid_body_calibration_bar.csv  uwb.csv
logs/tests/wifive test/3height/: rigid_body_calibration_bar.csv  uwb.csv
logs/tests/wifive test/4quick/: rigid_body_calibration_bar.csv  uwb.csv
logs/tests/wifive test/5network/: rigid_body_calibration_bar.csv  uwb.csv
logs/tests/wifive test/6_2D/: rigid_body_calibration_bar.csv  uwb.csv
logs/tests/wifive test/7latency/: rigid_body_calibration_bar.csv  uwb.csv
logs/tests/wifive test/dummy/: rigid_body_calibration_bar.csv  uwb.csv
motion_capture_stream/: CMakeLists.txt
motion_capture_stream/src/: main.cpp
serial_packet_stream/: CMakeLists.txt
serial_packet_stream/include/: util.h
serial_packet_stream/src/: parser.cpp  sample_talker.cpp
serial_packet_stream/wifive/include/: util.h
serial_packet_stream/wifive/src/: parser.cpp  sample_talker.cpp
src/: main.cpp
udp_json_stream/: CMakeLists.txt
udp_json_stream/scripts/: listener.py  sample_talker.py
udp_json_stream/src/: listener.cpp  sample_talker.cpp  talker.cpp
